feature modify commit

--- a/index.html
+++ b/index.html
@@ -8,5 +8,6 @@
 </head>
 <body>
     <h1>Hello world</h1>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. At et cupiditate provident eius soluta quasi, labore enim rem magnam debitis quam harum nam quos saepe voluptatibus facere amet tempora tempore.</p>
 </body>
 </html>
